fixed z-index of hamburger menu

--- a/backend/public/css/admin.css
+++ b/backend/public/css/admin.css
@@ -23,6 +23,7 @@ ul {
 
 .fixed-navbar-mobile {
   position: fixed !important;
+  z-index: 2000;
 }
 
 .top-todo-title {
